--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://back-end-for-assessment.vercel.app/api
-REACT_APP_SECRET_KEY="Abc@1029"
+VITE_API_URL=https://back-end-for-assessment.vercel.app
+VITE_SECRET_KEY="Abc@1029"
